# perfect6581

./: .gitmodules  CMakeLists.txt  netlist_6581.h  netlist_sim.c  netlist_sim.h  perfect6581.c  perfect6581.h  test.c  test.cpp  test1.txt  test_default.txt  test_env.txt  test_env_bug.txt  test_env_rel.txt  test_noise.txt  test_pulse.txt  test_reset.txt  test_saw.txt  test_testbit.txt  test_tri.txt
libicesid/: icesid.h  voice.v
libperfect6581/: netlist_6581.h  netlist_sim.c  netlist_sim.h  perfect6581.c  perfect6581.h  types.h
src/: driver.cpp  icesid.cpp  icesid.h  perfect6581.h  test.cpp  vcd.h
vcd-writer/: vcd_writer.h
